# advent-of-code-2025

./: .gitignore  Cargo.toml  README.md
day-01/: Cargo.toml
day-01/benches/: benchmarks.rs
day-01/src/: direction.rs  lib.rs  main.rs  part1.rs  part2.rs
day-02/: Cargo.toml
day-02/benches/: benchmarks.rs
day-02/src/: main.rs  part1.rs  part2.rs
day-03/: Cargo.toml  pyday.py
day-03/benches/: benchmarks.rs
day-03/src/: main.rs  part1.rs
day-04/: Cargo.toml
day-04/benches/: benchmarks.rs
day-04/src/: board.rs  lib.rs  main.rs  part1.rs  part2.rs
day-05/: Cargo.toml
day-05/benches/: benchmarks.rs
day-05/src/: main.rs  part1.rs  part2.rs
day-06/: Cargo.toml
day-06/benches/: benchmarks.rs
day-06/src/: main.rs  part1.rs  part2.rs
day-07/: Cargo.toml
day-07/benches/: benchmarks.rs
day-07/src/: board.rs  lib.rs  main.rs  part1.rs  part2.rs
day-08/: Cargo.toml
day-08/benches/: benchmarks.rs
day-08/src/: main.rs  part1.rs  part2.rs
day-09/: Cargo.toml
day-09/benches/: benchmarks.rs
day-09/src/: main.rs  part1.rs  part2.rs
day-10/: Cargo.toml
day-10/benches/: benchmarks.rs
day-10/src/: lib.rs  machine.rs  main.rs  part1.rs
day-11/: Cargo.toml
day-11/benches/: benchmarks.rs
day-11/src/: main.rs  part1.rs  part2.rs
day-12/: Cargo.toml
day-12/benches/: benchmarks.rs
day-12/src/: main.rs  part1.rs
template-day/: Cargo.toml
template-day/benches/: benchmarks.rs
template-day/src/: main.rs  part1.rs  part2.rs
