[workspace]
members = [
    "day-*",
    "day-02",
    "day-03",
    "day-04",
    "day-05",
    "day-06",
    "day-07",
    "day-08",
    "day-09",
    "day-10",
    "day-11",
    "day-12",
]
resolver = "2"

[workspace.dependencies]
divan = "0.1.17"
fxhash = "0.2.1"
glam = "0.29.0"
itertools = "0.13.0"
rayon = "1.10.0"
tracing = "0.1.41"

[workspace.dependencies.miette]
version = "7.4"
features = ["fancy"]

[workspace.dependencies.test-log]
version = "0.2.13"
features = ["trace"]
default-features = false

[workspace.dependencies.tracing-subscriber]
version = "0.3.18"
features = [
    "fmt",
    "env-filter",
]
