[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
glam.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
rayon.workspace = true
fxhash.workspace = true
itertools.workspace = true

[dev-dependencies]
divan.workspace = true
test-log.workspace = true

[[bench]]
name = "{{project-name}}-bench"
path = "benches/benchmarks.rs"
harness = false
